k8s/backend_old/templates/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: backend-database-auth
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-postgres
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/backend"]
    to:
    - operation:
        ports: ["5432"]
